improved api design
